# FREUID-Challenge-2026---IJCAI-ECAI

./: Config.py  Dataloaders.py  Dockerfile  README.md  main.py  model.py  optimizer.py  optuna_study.db  prepare_submission.py  pyproject.toml  requirements.txt
Model/: Config.py  model.py  optimizer.py
data/: Dataloaders.py  dataprep.py
optuna_analysis/: all_trials.csv  correlation_matrix.csv  intermediate_values.csv  parameter_importance.csv  trial_metrics.csv
train/: train.py
train_scripts/: eval.py  optuna.py  optuna_eval.py  train.py
