[project]
name = "freuid-challenge-2026-ijcai-ecai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightning>=2.6.5",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "rich>=15.0.0",
    "torch>=2.12.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.27.1",
    "tqdm>=4.66.5",
    "triton-windows>=3.7.1.post27",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
